[package]
name = "moldyn_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
moldyn_core = { path = "../core" }
moldyn_solver = { path = "../solver" }
nalgebra = "0.32"
indicatif = "0.17"
log = "0.4"
env_logger = "0.10"
pollster = "0.3"

[dev-dependencies]
tempdir = "0.3"