[package]
name = "moldyn_cli"
version = "0.6.4"
authors = ["Andrew Chernyakov <Chernjakov2@gmail.com>"]
edition = "2021"
description = "Core library for molecular dynamics toolchain"
repository = "https://github.com/AndrewChe7/moldyn"
license = "GPL-3.0"
keywords = ["molecular-dynamics", "physics"]
categories = [
    "science",
    "simulation",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
moldyn_core = { path = "../core" }
moldyn_solver = { path = "../solver" }
nalgebra = "0.32"
indicatif = "0.17"
log = "0.4"
env_logger = "0.10"
pollster = "0.3"
csv = "1.3"
rayon = "1.8"

[dev-dependencies]
tempdir = "0.3"