[package]
name = "moldyn_core"
version = "0.3.0"
authors = ["Andrew Chernyakov <Chernjakov2@gmail.com>"]
edition = "2021"
description = "Core library for molecular dynamics toolchain"
repository = "https://github.com/AndrewChe7/moldyn"
license = "GPL-3.0"
keywords = ["molecular-dynamics", "physics"]
categories = [
    "science",
    "simulation",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = {version="1.0", features = ["derive"]}
csv = "1.2"
itertools = "0.11"
nalgebra = {version="0.32", features = ["serde-serialize"]}
lazy_static = "1.4"
log = "0.4"

[dev-dependencies]
tempdir = "0.3"
rand = "0.8"
