[package]
name = "moldyn_gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "moldyn_gui_lite"
path = "src/main_lite.rs"

[[bin]]
name = "moldyn_gui_ray"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moldyn_core = { path = "../core" }
moldyn_solver = { path = "../solver" }
bytemuck = {version = "1.13.1", features = ["derive"]}
nalgebra = "0.32.2"
cgmath = "0.18.0"
wgpu = "0.16.1"
winit = "0.28.6"
egui = "0.22.0"
egui_demo_lib = "0.22.0"
egui_wgpu_backend = "0.24.0"
egui_winit_platform = "0.19.0"
env_logger = "0.10.0"
log = "0.4.19"
pollster = "0.3.0"
cfg-if = "1.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = { version = "0.16.1", features = ["webgl"]}
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = [
    "Document",
    "Window",
    "Element",
]}