[package]
name = "moldyn_gui"
version = "0.6.0"
authors = ["Andrew Chernyakov <Chernjakov2@gmail.com>"]
edition = "2021"
description = "Core library for molecular dynamics toolchain"
repository = "https://github.com/AndrewChe7/moldyn"
license = "GPL-3.0"
keywords = ["molecular-dynamics", "physics"]
categories = [
    "science",
    "simulation",
]

[[bin]]
name = "moldyn_gui_app"
path = "src/main.rs"

[lib]
name = "moldyn_gui"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moldyn_core = { path = "../core" }
moldyn_solver = { path = "../solver" }
bytemuck = {version = "1.13", features = ["derive"]}
rfd = "0.12"
nalgebra = "0.32"
cgmath = "0.18"
wgpu = "0.16"
winit = "0.28"
egui = "0.22"
egui_demo_lib = "0.22"
egui_wgpu_backend = "0.24"
egui_winit_platform = "0.19"
egui-gizmo = { version = "0.11" }
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
itertools = "0.11"
cfg-if = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "0.16", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}