[package]
name = "moldyn_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.16"
rand = "0.8"
rand_distr = "0.4"
moldyn_core = { path = "../core" }
nalgebra = "0.32"
lazy_static = "1.4"
serde_json = "1.0"
serde = {version="1.0", features = ["derive"]}
log = "0.4"
bytemuck = {version = "1.13", features = ["derive"]}
futures-intrusive = "0.5"
pollster = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }