[package]
name = "moldyn_solver"
version = "0.4.1"
authors = ["Andrew Chernyakov <Chernjakov2@gmail.com>"]
edition = "2021"
description = "Core library for molecular dynamics toolchain"
repository = "https://github.com/AndrewChe7/moldyn"
license = "GPL-3.0"
keywords = ["molecular-dynamics", "physics"]
categories = [
    "science",
    "simulation",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_distr = "0.4"
moldyn_core = { path = "../core" }
nalgebra = "0.32"
lazy_static = "1.4"
serde_json = "1.0"
serde = {version="1.0", features = ["derive"]}
log = "0.4"
rayon = "1.7.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }