[package]
name = "moldyn_solver"
version = "0.7.0"
authors = ["Andrew Chernyakov <Chernjakov2@gmail.com>"]
edition = "2021"
description = "Core library for molecular dynamics toolchain"
repository = "https://github.com/AndrewChe7/moldyn"
license = "GPL-3.0"
keywords = ["molecular-dynamics", "physics"]
categories = [
    "science",
    "simulation",
]

[[bench]]
name = "solver_bench"
harness = false

[[bench]]
name = "init_bench"
harness = false

#[[bench]]
#name = "macro_bench"
#harness = false

[dependencies]
rand = "0.8"
rand_distr = "0.4"
moldyn_core = { path = "../core" }
nalgebra = "0.32"
lazy_static = "1.4"
serde_json = "1.0"
csv = "1.3"
serde = {version="1.0", features = ["derive"]}
log = "0.4"
rayon = "1.8"
criterion = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }